--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,20 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>3 Tier App</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Site Visitors Dashboard</title>
+  <style>
+    body { font-family: Arial; background:#f5f5f5; }
+    h1 { text-align:center; }
+    .card { background:white; padding:20px; margin:20px auto; width:80%; }
+    table { width:100%; border-collapse: collapse; }
+    th, td { border:1px solid #ccc; padding:8px; }
+    th { background:#eee; }
+  </style>
 </head>
 <body>
-  <h1>3 Tier Application</h1>
-  <button onclick="callBackend()">Call Backend</button>
-  <p id="result"></p>
 
-  <script>
-    function callBackend() {
-      fetch("http://18.201.173.37:5000")
-        .then(res => res.text())
-        .then(data => document.getElementById("result").innerText = data);
-    }
-  </script>
+<h1>📊 Site Visitors Analytics</h1>
+
+<div class="card">
+  <h3>Stats</h3>
+  <p id="stats">Loading...</p>
+</div>
+
+<div class="card">
+  <h3>Recent Visitors</h3>
+  <table>
+    <thead>
+      <tr><th>IP</th><th>Browser</th><th>Time</th></tr>
+    </thead>
+    <tbody id="visitors"></tbody>
+  </table>
+</div>
+
+<script>
+fetch("/api/visit");
+
+fetch("/api/stats")
+  .then(r => r.json())
+  .then(d => {
+    document.getElementById("stats").innerText =
+      `Total: ${d.total_visits}, Unique: ${d.unique_visitors}, Last: ${d.last_visit}`;
+  });
+
+fetch("/api/visitors")
+  .then(r => r.json())
+  .then(rows => {
+    document.getElementById("visitors").innerHTML =
+      rows.map(r =>
+        `<tr><td>${r.ip_address}</td><td>${r.user_agent}</td><td>${r.visited_at}</td></tr>`
+      ).join("");
+  });
+</script>
+
 </body>
 </html>
